--- a/assets/sass/layout/header/_header.scss
+++ b/assets/sass/layout/header/_header.scss
@@ -1,7 +1,8 @@
 .site-header {
-  padding: 20px 0 0;
+    padding: 20px 0 0;
 	position: absolute;
 	width: 100%;
+    z-index: 100;
 }
 
 // Site Title
